# reu-swarm-ros

./: .autotools  .cproject  .gitignore  DataStructures.hpp  LICENSE  README.md  REU_Swarm_Software_ClassDiagram
Swarm/: Model.py  Processor2.cpp  Processor2.hpp  Robot.py  Rules.py  VectorQueue.py  obstacles_finding.cpp
alice_pkg/: CMakeLists.txt  package.xml  setup.py
arduino/: IMU-MPU6050.ino
aruco_markers/: CMakeLists.txt  README.md
aruco_markers/launch/: find_markers.launch
aruco_markers/msg/: Marker.msg
aruco_markers/src/: aruco_find_markers.cpp  aruco_marker_generation.cpp  aruco_positioning.cpp
data_visualization/: .gitignore  GameClock.hpp  MenuControl.hpp  contour.cpp  contour.h  main.cpp
data_visualization/sub_types/: ColorMap.cpp  ColorMap.h
documentation/: MessageTypes.md  ServerDocumentation.md  ViconBridgeDocumentation.md
flocking-sim-Aleks-Hatfield/: CMakeLists.txt  README.md
flocking-sim-Aleks-Hatfield/src/: Body.cpp  Body.h  Flock.cpp  Flock.h  Game.cpp  Game.h  Pvector.cpp  Sim.cpp  flock-sim  main.cpp  makefile
nuitrack_console_udp/: CMakeLists.txt
nuitrack_console_udp/src/: main.cpp
nuitrack_sdk/doc/: Architecture_page.html  BestPractices_page.html  Color3_8h_source.html  ColorSensor_8h_source.html  DepthSensor_8h_source.html  Error_8h_source.html  Hand_8h_source.html  (+206 more)
robot_integrated_rework/: project.properties
sfml_sim/: GameClock.hpp  MenuControl.hpp  README.txt  Robot.hpp  SimBase.hpp  SwarmSim.cpp
swarm_server/: AcceptLoop.cpp  README.txt  ViCon.hpp  arduino_server.h  arduino_server_source.cpp  arduino_server_source.hpp  arduino_test.cpp  robot_id.h  ros_to_arduino_server.cpp  server_testing(recieve from client).cpp  server_testing(recieve from server).cpp
swarm_ws/: .gitignore
swarm_ws/nuitrack_sdk/Examples/uh/: CMakeLists.txt
swarm_ws/nuitrack_sdk/Examples/uh/nbproject/: configurations.xml  project.xml
swarm_ws/nuitrack_sdk/Examples/uh/nbproject/private/: configurations.xml  private.xml
swarm_ws/src/alice_swarm/: CMakeLists.txt  package.xml
swarm_ws/src/alice_swarm/include/alice_swarm/: Alice.h  Hub.h  Model.h  Robot.h  Rules.h  VectorQueue.h  aliceStructs.h
swarm_ws/src/alice_swarm/src/: AbsToRel.cpp  Alice.cpp  AliceMain.cpp  Hub.cpp  Hub.h  InterHub.cpp  MapHub.cpp  Model.cpp  ProRun.cpp  Robot.cpp  Rules.cpp  VectorQueue.cpp  VectorQueue.h
swarm_ws/src/alice_swarm/srv/: get_map.srv  get_maps.srv
swarm_ws/src/aruco_markers/: package.xml
swarm_ws/src/aruco_markers/launch/: find_markers.launch
swarm_ws/src/aruco_markers/launch/launch_params/: Air_Hockey_Webcam.yaml  usb_cam_calibration.yaml
swarm_ws/src/aruco_markers/msg/: MarkerArray.msg
swarm_ws/src/aruco_markers/src/: aruco_find_markers.cpp
swarm_ws/src/contour_node/: CMakeLists.txt  package.xml
swarm_ws/src/contour_node/include/contour_node/: ellipse_object.h  gaussian_object.h  level_description.h  level_object.h  object_finder.h  universe_object.h
swarm_ws/src/contour_node/msg/: ellipse.msg  gaussian.msg  map_level.msg  map_levels.msg  obstacle.msg
swarm_ws/src/contour_node/src/: ellipse_object.cpp  gaussian_object.cpp  level_description.cpp  level_object.cpp  mapping.cpp  object_finder.cpp  universe_object.cpp
swarm_ws/src/nuitrack_ros/: CMakeLists.txt  package.xml
swarm_ws/src/nuitrack_ros/src/: hand_pub.cpp
swarm_ws/src/processor/: CMakeLists.txt  package.xml
swarm_ws/src/processor/src/: ProRun.cpp  Processor.cpp  Processor.h  processor.cpp
swarm_ws/src/swarm_server/: CMakeLists.txt  arduino_server.h  arduino_server_source.cpp  package.xml
swarm_ws/src/swarm_server/include/swarm_server/: battery_states.h  robot_id.h
swarm_ws/src/swarm_server/server_messages/: robotcommand.msg
swarm_ws/src/swarm_server/src/: arduino_server.h  arduino_server_source.cpp  arduino_test.cpp  funnel.cpp  robot_id.cpp  robot_id.h  ros_to_arduino_server.cpp  testing.cpp
swarm_ws/src/swarm_simulation/: CMakeLists.txt  package.xml
swarm_ws/src/swarm_simulation/include/swarm_simulation/: Body.h  Flock.h  Font.h  Hawk_Sim.h  Pvector.h  Sim.h  font_sim.txt  hawk_sim.h  sim_settings.h
swarm_ws/src/swarm_simulation/src/: Body.cpp  Flock.cpp  Hawk_Sim.cpp  Pvector.cpp  Sim.cpp  Sim_Execute.cpp  hawk_sim.cpp  hawk_sim.cpp~d4b0940... Sim now draws charging stations  hawk_sim_execute.cpp  main.cpp  virtual_objects.cpp  virtual_obstacle.cpp
swarm_ws/src/vicon_demo/: CMakeLists.txt  package.xml
swarm_ws/src/vicon_demo/launch/: tracker.launch
swarm_ws/src/vicon_demo/src/: alicetrack_demo.cpp  demo_vis.cpp  multitrack_demo.cpp  robot_id.h  tracking_demo.cpp  vicon_demo.cpp
swarm_ws/src/visualization/: CMakeLists.txt  package.xml
swarm_ws/src/visualization/cfg/: calib.config  table_settings.h
swarm_ws/src/visualization/include/visualization/: alice_pov.h  color_map.h  contour.h  keyboard_managment.h  perspective_transform_gpu.h  visualization_settings.h
swarm_ws/src/visualization/src/: alice_pov.cpp  alice_pov_main.cpp  calculation.cu  calibrate.cpp  color_map.cpp  color_map.cu  color_map.h  contour.cpp  contour.cu  contour.h  keyboard_managment.cpp  table_vis.cpp
swarm_ws/src/visualization/src/transform/: perspective_transform.cpp  perspective_transform_gpu.cu  perspective_transform_gpu.h
swarm_ws/src/wvu_swarm_std_msgs/: CMakeLists.txt  package.xml  sensor_data.msg
swarm_ws/src/wvu_swarm_std_msgs/msg/: aliceMail.msg  aliceMailArray.msg  alice_mail.msg  alice_mail_array.msg  charger.msg  chargers.msg  cont_msg.msg  ellipse.msg  energy.msg  executeVector.msg  flow.msg  flow_mail.msg  flows.msg  gaussian.msg  map.msg  map_level.msg  map_levels.msg  neighbor_mail.msg  nui_hands.msg  nuitrack_data.msg  obsPointMail.msg  obs_msg.msg  obstacle.msg  priorities.msg  priority.msg  robot_command.msg  robot_command_array.msg  robotcommandarray.msg  rtheta.msg  sensor_data.msg  tar_msg.msg  typedPoint.msg  viconBot.msg  viconBotArray.msg  vicon_bot.msg  vicon_bot_array.msg  vicon_point.msg  vicon_points.msg  virtual_objects.msg
tcp_server_testing/: .gitignore  GraphLatency.cpp  client_swarm.cpp  command_listener.cpp  pinger.cpp  robot_id.h
(+322 files in other folders)
