<?xml version="1.0"?>
<package format="2">
  <name>wvu_swarm_std_msgs</name>
  <version>0.0.1</version>
  <description>
    Contains all message types needed for communication between this project's nodes.
  </description>

  <author>WVU Interactive Robotics Laboratory</author>
  <license>BSD</license>
  <url>https://github.com/wvu-irl/reu-swarm-ros</url>
  <url>https://web.statler.wvu.edu/~irl/</url>
  <maintainer email="hlv0002@mix.wvu.edu">Henry Vos</maintainer>
  <maintainer email="nhewitt@uncc.edu">Nathan Hewitt</maintainer>

  <buildtool_depend>catkin</buildtool_depend>
  <build_depend>geometry_msgs</build_depend>
  <build_depend>message_generation</build_depend>
  <build_depend>roscpp</build_depend>
  <build_depend>rospy</build_depend>
  <build_depend>std_msgs</build_depend>
  <build_depend>tf2</build_depend>
  <build_depend>tf2_ros</build_depend>
  <build_depend>visualization_msgs</build_depend>
  <build_export_depend>geometry_msgs</build_export_depend>
  <build_export_depend>roscpp</build_export_depend>
  <build_export_depend>rospy</build_export_depend>
  <build_export_depend>std_msgs</build_export_depend>
  <build_export_depend>tf2</build_export_depend>
  <build_export_depend>tf2_ros</build_export_depend>
  <build_export_depend>visualization_msgs</build_export_depend>
  <exec_depend>geometry_msgs</exec_depend>
  <exec_depend>roscpp</exec_depend>
  <exec_depend>rospy</exec_depend>
  <exec_depend>std_msgs</exec_depend>
  <exec_depend>tf2</exec_depend>
  <exec_depend>tf2_ros</exec_depend>
  <exec_depend>visualization_msgs</exec_depend>
  <exec_depend>message_runtime</exec_depend>


  <!-- The export tag contains other, unspecified, tags -->
  <export>
    <!-- Other tools can request additional information be placed here -->

  </export>
</package>
